# HallucinatingDM

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  update.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_fts_tables.py  c3d4e5f6a7b8_messages_fts.py  f6d9d6f5fbdf_initial_schema.py
backend/app/: config.py  db.py  main.py
backend/app/ai/: chargen.py  context_builder.py  dm_agent.py  entity_resolver.py  memory.py  mock_provider.py  provider.py  retrieval.py  suggestions.py  toolcall_fallback.py  trigger.py
backend/app/api/: __init__.py  admin.py  auth.py  campaigns.py  characters.py  combat.py  deps.py  dm.py  documents.py  errors.py  scenes.py  srd.py  world.py  ws.py
backend/app/models/: __init__.py  campaign.py  character.py  combat.py  creature.py  document.py  item.py  message.py  ops.py  scene.py  srd.py  user.py  world.py
backend/app/rag/: chunker.py  embedder.py  ingest.py  search.py
backend/app/realtime/: events.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_campaigns.py  test_characters.py  test_chargen_kit.py  test_dice.py  test_dm_agent.py  test_dm_behavior.py  test_dm_modes.py  test_guardrails.py  test_healthz.py  test_leveling.py  test_memory.py  test_multitenancy.py  test_purge.py  test_quest_log.py  test_rag.py  test_scene_prep.py  test_scenes.py  test_smoke_ollama.py  test_suggestions.py  test_table_tools.py  test_toolcall_fallback.py  test_transcript.py  test_turn_gathering.py  test_world_combat.py  test_ws.py
(+71 files in other folders)
